--- a/style.css
+++ b/style.css
@@ -118,14 +118,23 @@
     bottom: -22px;
     left: 25px;
     font-size: 10px;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .error-icon{
-    display: none;
     position: absolute;
     top: 15px;
     right: 120px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.message-error,
+.error-icon {
+    transition: all 0.3s ease;
 }
 
 .email::placeholder{
@@ -163,3 +172,30 @@
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@media (max-width: 600px) {
+    .heroDesktop{
+        display: none;
+    }
+
+    .heroMobile{
+        display: block;
+        width: 100vw;
+    }
+
+    .info{
+        height: 90%;
+        width: 90%;
+    }
+
+    .text{
+        text-align: center;
+        height: 280px;
+        width: 350px;
+    }
+
+    .title{
+        font-size: 40px;
+        line-height: 50px;
+    }
+}
